# akonado

./: .gitignore  CLAUDE.md  LICENSE  README.en.md  README.md  main.gd  main.gd.uid  main.tscn  project.godot
akonado/: .env.example  .gitignore  README.md  __init__.py  __main__.py  cli.py  config.py  pyproject.toml
akonado/comfyui/: example_audio_generation.json  example_image_generation.json  example_logo.json  example_remove_background.json  example_title_bg.json  sfx_generation.json
akonado/generators/: __init__.py  backgrounds.py  bgm.py  cg.py  characters.py  dialogue.py  godot_resources.py  se.py  ui.py  voice.py
akonado/providers/: __init__.py  base.py  comfyui.py  image.py  llm.py  tts_mimo.py  tts_qwen.py
akonado/skills/: __init__.py  generate_audio_prompts.json  generate_background_prompts.json  generate_cg_prompts.json  generate_character_prompts.json  generate_scene_script.json  generate_script.json  generate_ui_prompts.json  generate_voice_config.json
akonado/web/: __init__.py  app.py
akonado/web/templates/: base.html  config.html  index.html  manifest_detail.html  manifests.html  skill_detail.html  skills.html
docs/akonado/: architecture.md  comfyui-setup.md  getting-started.md  index.md  manifests.md  providers.md  skills.md  test-report.md  tts-setup.md  upstream-issue.md  web-gui.md  workflow.md
konado-script-syntax/: README.md
sample/demo/: demo.tscn  demo_01.ks  (+5 more)
skills/: mimo-tts.md  qwen3tts.md
tests/: test_cli.py  test_comfyui.py  test_config.py  test_skills.py
ui/: icon.png.import  splash.png.import  title_logo.png.import
(+65 files in other folders)
